fix: fix links opening and scroll on mobile

--- a/main.css
+++ b/main.css
@@ -169,19 +169,12 @@ h1 {
   padding: 0;
   text-align: center;
   color: #ffffff;
-  border: none;
-  outline: none;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
   border-radius: 50%;
   cursor: pointer;
   background: grey;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 12px; }
-  .dot:focus {
-    outline: none; }
   .dot:not(:last-child) {
     margin-right: 10px; }
   .dot_active {
